DST fix and gem tooltip

--- a/gw2t.css
+++ b/gw2t.css
@@ -1436,7 +1436,7 @@ dt.mapJPListNameHover {
 	font-weight: bold;
 }
 
-/* Calculator
+/* Arithmetic Calculator
 ----------------------------------------------------------------------------- */
 #trdCalculation img {
 	vertical-align: middle;
