--- a/gw2t.css
+++ b/gw2t.css
@@ -4,7 +4,7 @@
 	Measurements: minimum window size is 360x580, which is only enough for the
 	clock and timers list (all of the right panel).
 	CSS3: uses gradient, text-shadow, box-shadow modules.
-	Version: 2014.10.31 modified - 2014.04.18 created
+	Version: 2014.11.13 modified - 2014.04.18 created
 
 	CREDITS:
 	Game assets and map tiles are copyright 2012 ArenaNet, Inc.
@@ -1405,6 +1405,12 @@ dt.mapJPListNameHover {
 
 .mapJPList label:hover {
 	border: 1px solid red;
+}
+
+#mapJPCounter {
+	float: right;
+	font-size: 18px;
+	color: #ffeebb;
 }
 
 .mapResourceList {
