--- a/gw2t.css
+++ b/gw2t.css
@@ -285,6 +285,11 @@ a, input, label, button,
 	background: url("img/background/space.jpg") repeat center;
 }
 
+#paneMapAlternate {
+	display: none;
+	margin-left: 360px;
+}
+
 /* Bottom left corner: Coordinates bar */
 #itemMapCoordinates {
 	position: absolute;
@@ -366,9 +371,8 @@ input#mapCoordinatesName {
 	opacity: 0;
 }
 
-/* Map GPS */
 #mapGPSButton {
-	margin-right: -8px;
+	display: none;
 }
 
 /* Map options */
@@ -1187,7 +1191,8 @@ textarea.jsCopyCode {
 /* @@Chains layer
 ----------------------------------------------------------------------------- */
 #optAlarm {
-	float: right;
+	position: absolute;
+	margin-left: 280px;
 	padding: 7px 4px 6px 0px;
 	opacity: 0.5;
 }
@@ -1208,7 +1213,7 @@ textarea.jsCopyCode {
 }
 #optAlarm:hover #itemAlarmPopup {
 	display: block;
-	right: 0;
+	right: -30px;
 	position: absolute;
 	margin: 0;
 	padding: 6px;
@@ -1442,7 +1447,7 @@ textarea.jsCopyCode {
 button.btnToggle {
 	margin-top: 8px;
 	margin-bottom: 8px;
-	width: 62%;
+	width: 220px;
 }
 
 .mapDailyLists h2 img {
@@ -1451,9 +1456,9 @@ button.btnToggle {
 }
 
 #mapLoginRecord {
+	margin-left: 140px;
 	margin-top: 8px;
 	font-size: 18px;
-	text-align: center;
 	color: #ffeeaa;
 }
 
@@ -1778,11 +1783,11 @@ input[type="text"].trdMatched {
 }
 
 #chlDungeonCalculator {
-	margin-right: 126px;
+	
+	margin-left: 48px;
 	margin-bottom: 6px;
 	font-size: 18px;
 	font-weight: bold;
-	text-align: right;
 	text-shadow:
 		1px 1px 0px #000,
 		-1px -1px 0px #000,
@@ -1802,6 +1807,7 @@ input[type="text"].trdMatched {
 	padding-left: 4px;
 	border-bottom: 1px solid #e4e0b3;
 	border-radius: 4px;
+	text-align: right;
 }
 
 #chlDungeonCalculator_Gold {
