--- a/gw2t-mobile.css
+++ b/gw2t-mobile.css
@@ -5,8 +5,33 @@
 
 /* Restructure to fit */
 
+html, body {
+	background: linear-gradient(to right, #111 0%, #383838 50%, #111 100%);
+}
+
+html {
+	overflow-y: scroll;
+}
+
+#jsConsoleButtons {
+	position: fixed;
+	bottom: 24px;
+}
+
 #panelLeft {
 	display: none;
+}
+
+#windowMain {
+	text-align: center;
+	background: none;
+}
+
+#panelRight {
+	position: relative;
+	display: inline-block;
+	text-align: left;
+	background: none;
 }
 
 body, #paneContent article {
@@ -17,13 +42,24 @@ body, html, .panelMain, #windowMain, #paneContent article {
 	height: auto;
 }
 
-#paneContent {
-	position: relative;
-}
-
 .paneRight {
 	right: auto;
 	border-left: none;
+	box-shadow: 0px 0px 16px #111;
+}
+
+#paneMenu {
+	border-bottom-right-radius: 8px;
+}
+
+#paneContent {
+	position: relative;
+	border-top-right-radius: 8px;
+	border-bottom-right-radius: 8px;
+}
+
+.cntComposition {
+	margin-top: 0;
 }
 
 /* Element resize */
@@ -75,6 +111,8 @@ body, html, .panelMain, #windowMain, #paneContent article {
 
 .chnTitle h1 {
 	width: 178px;
+	font-size: 18px;
+	text-align: center;
 }
 
 .chnTitle time {
@@ -88,6 +126,10 @@ body, html, .panelMain, #windowMain, #paneContent article {
 
 #layerChains header span {
 	visibility: visible;
+	color: #666;
+}
+#layerChains header:hover span {
+	color: white;
 }
 
 /* Options page */
@@ -123,4 +165,8 @@ header.jsSection {
 
 .chlDungeonBar label {
 	margin-right: 8px;
+}
+
+#chlCustom span {
+	margin-bottom: 4px;
 }
