--- a/gw2t-mobile.css
+++ b/gw2t-mobile.css
@@ -116,6 +116,8 @@ body, html, .panelMain, #windowMain, #paneContent article {
 }
 
 .chnTitle time {
+	width: 88px;
+	font-family: sans-serif;
 	font-size: 18px;
 }
 
@@ -139,7 +141,7 @@ body, html, .panelMain, #windowMain, #paneContent article {
 }
 
 input[type=checkbox] {
-	transform: scale(1.5);
+	transform: scale(1.25);
 }
 
 input[type="number"] {
@@ -165,6 +167,10 @@ header.jsSection {
 
 .chlDungeonBar label {
 	margin-right: 8px;
+}
+
+#chlCustom input[type="text"] {
+	font-size: 16px;
 }
 
 #chlCustom span {
